[package]
name = "backend"
version = "0.1.0"
authors = ["Owen Salter <owen@devosmium.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0-alpha.3"
actix-rt = "1"
actix-web-actors = "2"
tokio = { version = "0.2", features = ["macros"] }

# Ser/deser
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["v4", "serde"] }

# database
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "postgres", "uuid"] }

